--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         }
 
         .btn-primary {
-            background: linear-gradient(45deg, #00b4db, #0083b0);
+            background: linear-gradient(45deg,#FFD700, #FFA500, #FF8C00 );
             color: white;
         }
 
@@ -465,4 +465,5 @@
         window.onload = initializePage;
     </script>
 </body>
+
 </html>
