--- a/index.html
+++ b/index.html
@@ -464,6 +464,25 @@
         // Запуск при загрузке
         window.onload = initializePage;
     </script>
+   </div> <!-- Закрывающий тег для .container -->
+
+        <!-- Блок создателей -->
+        <div style="
+            text-align: center; 
+            margin-top: 40px; 
+            color: #aaa; 
+            font-size: 0.9em;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 10px;
+            max-width: 800px;
+            margin: 40px auto 20px;
+        ">
+            <p>Викторина создана с помощью AI-ассистента DeepSeek и преподавателем информатики и ИКТ Кудрявцевой Е.Ю.<br> 
+               Тверской политехнический колледж</p>
+            <p>© 2025 Энерговикторина</p>
+        </div>
 </body>
 
 </html>
+
