--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         .header h1 {
             font-size: 3.5em;
             margin-bottom: 20px;
-            background: linear-gradient(45deg, #00b4db, #0083b0, #00ff88);
+            background: linear-gradient(45deg,  #FFD700, #FFA500, #FF8C00);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
@@ -485,4 +485,5 @@
 </body>
 
 </html>
+
 
