--- a/index.html
+++ b/index.html
@@ -478,12 +478,13 @@
             max-width: 800px;
             margin: 40px auto 20px;
         ">
-            <p>Викторина создана с помощью AI-ассистента DeepSeek и преподавателем информатики и ИКТ Кудрявцевой Е.Ю.<br> 
+            <p>Викторина создана преподавателем информатики и ИКТ Кудрявцевой Е.Ю. с помощью AI-ассистента DeepSeek <br> 
                Тверской политехнический колледж</p>
             <p>© 2025 Энерговикторина</p>
         </div>
 </body>
 
 </html>
+
 
 
