--- a/ugadai-slovo.html
+++ b/ugadai-slovo.html
@@ -482,7 +482,7 @@
         <!-- Шапка -->
         <div class="header">
             <h1>🔠 ЭНЕРГОШИФР</h1>
-            <p>Угадайте энергетические термины по буквам! Классическая "Виселица" на профессиональную тематику</p>
+            <p>Угадайте энергетические термины по буквам!</p>
             
             <div class="control-panel">
                 <button class="btn btn-primary" onclick="window.location.href='index.html'">
@@ -1202,3 +1202,4 @@
     </script>
 </body>
 </html>
+
