--- a/index.html
+++ b/index.html
@@ -586,6 +586,12 @@
                 <div class="quiz-title">ЭнергоВикторина</div>
                 <div class="quiz-description">Общая викторина по энергетике. Проверка общих знаний!</div>
             </a>
+
+    <a href="puzzle.html" class="quiz-card">
+        <div class="quiz-icon">🧱</div>
+        <div class="quiz-title">ЭнергоПазлы</div>
+        <div class="quiz-description">Собери пазл электрооборудования</div>
+    </a>
         </div>
 
         <!-- Футер -->
@@ -858,4 +864,5 @@
     </script>
    </body>
 </html>
+
 
